<resources>
    <string name="app_name">Name Quiz</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="database">Database</string>
    <string name="add_new_name">Add New Name</string>
    <string name="exit">Exit</string>
    <string name="upload">Upload</string>
    <string name="take_pic">Take Picture</string>
    <string name="enter_name">Enter Name:</string>
    <string name="add">Add</string>
    <string name="toast_new_name">New name added</string>
    <string name="quiz_who_is_this">Who is this?</string>
    <string name="quiz_next">Next</string>
    <string name="quiz_score">Score:</string>
    <string name="quiz_correct">Correct answer!</string>
    <string name="quiz_wrong">Wrong answer, correct answer is</string>
    <string name="quiz_reset_score">Reset score</string>
    <string name="db_edit">Edit</string>
    <string name="db_delete">Delete</string>
    <string name="db_add">Add New Name</string>
    <string name="validation_empty">Name cannot be empty</string>
    <string name="db_prepopulate">Prepopulate</string>
    <string name="db_delete_all">Delete All</string>
    <string name="quiz_db_empty">The database is empty, please add a name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="db_delete_all_confirmation">Are you sure you want to delete everything?</string>
    <string name="db_delete_all_confirmation_title">Delete All</string>
    <string name="quiz_reset_score_confirmation">Are you sure you want to reset the score?</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="change_preferences">Change preferences</string>
    <string name="logo">Logo</string>
</resources>
