<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/menu_db_add_new_name"
            android:orderInCategory="100"
            android:title="@string/db_add"
            app:showAsAction="never" />
    <item
            android:id="@+id/menu_db_prepopulate"
            android:orderInCategory="100"
            android:title="@string/db_prepopulate"
            app:showAsAction="never" />
    <item
            android:id="@+id/menu_db_delete_all"
            android:orderInCategory="100"
            android:title="@string/db_delete_all"
            app:showAsAction="never" />
    <item
            android:id="@+id/menu_change_preferences"
            android:orderInCategory="100"
            android:title="@string/change_preferences"
            app:showAsAction="never" />
</menu>