<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddActivity">

    <ImageView
            android:layout_width="212dp"
            android:layout_height="183dp" app:srcCompat="@drawable/person1"
            android:id="@+id/imageView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="99dp"
            android:layout_marginStart="99dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp" android:layout_marginTop="49dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:id="@+id/new_upload"
            app:layout_constraintEnd_toStartOf="@+id/new_take_pic"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:textStyle="bold" android:background="@drawable/button_background_scalable" android:textSize="24sp"
            android:textColor="#FFFFFF" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/take_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:id="@+id/new_take_pic"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:textStyle="bold"
            android:background="@drawable/button_background_scalable" android:textSize="24sp"
            android:textColor="#FFFFFF" app:layout_constraintStart_toEndOf="@+id/new_upload"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/enter_name"
            android:gravity="center"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp" android:id="@+id/textView" android:textSize="24sp"
            android:layout_marginTop="55dp" app:layout_constraintTop_toBottomOf="@+id/new_upload"
            android:textColor="@android:color/black" android:textStyle="bold"/>
    <EditText
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/new_name" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="79dp" android:layout_marginStart="79dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="79dp" android:layout_marginRight="79dp" android:textSize="24sp"
            android:textStyle="bold"/>
    <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_add"
            android:background="@drawable/button_background" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/new_name" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="56dp" android:layout_marginRight="56dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="55dp"
            android:layout_marginStart="55dp" app:layout_constraintHorizontal_bias="0.0" android:textSize="30sp"
            android:textStyle="bold" android:textColor="#FFFFFF"/>
</android.support.constraint.ConstraintLayout>