<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/ok">
    <ImageView
            android:layout_width="336dp"
            android:layout_height="190dp" app:srcCompat="@drawable/namequiz"
            android:id="@+id/imageView" android:scaleType="centerInside" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/start_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_start"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.494"
            android:background="@drawable/button_background" android:textSize="30sp" android:textColor="#FFFFFF"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/appOwner"/>
    <Button
            android:text="@string/database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_database"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.494"
            android:background="@drawable/button_background"
            android:textSize="30sp" android:textColor="#FFFFFF" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_start"/>
    <Button
            android:text="@string/add_new_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_add"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.494"
            android:background="@drawable/button_background"
            android:textSize="30sp" android:textColor="#FFFFFF" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_database"/>


    <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_exit" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            android:background="@drawable/button_background"
            android:textSize="30sp" android:textColor="#FFFFFF" android:onClick="exitApplication"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_add"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/appOwner" android:layout_marginTop="232dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
    <Button
            android:text="OK"
            android:layout_width="51dp"
            android:layout_height="54dp"
            android:id="@+id/button_ok" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toEndOf="@+id/appOwner"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.093" android:background="@drawable/button_background"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appOwnerSaved" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.498"/>

</android.support.constraint.ConstraintLayout>